umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@rdkit_2129_C[CH]1CC(=CC(=O)C1)C.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: opensmiles_strict
category: opensmiles_strict
opensmiles_strict:
  success: true
  summary:
    sum_formula: C8O
    atom_count: 9
    bond_count: 9
